Trying to make game over buttons fix inside chocolate bar on mobile 2

--- a/src/styles.css
+++ b/src/styles.css
@@ -123,7 +123,7 @@ h1 {
 	justify-content: center;
 
 	/* background-color: hsl(10, 59%, 31%); */
-	background-color: magenta;
+	background-color: turquoise;
 	border: 4px solid;
 	border-left-color: hsl(10, 59%, 44%);
 	border-top-color: hsl(10, 59%, 44%);
@@ -203,7 +203,7 @@ i.fa-skull-crossbones {
 
 button {
 	width: calc(2 * min(80px, 15vmin) - 15px);
-	height: calc(min(80px, 15vmin) - 8px);
+	height: calc(min(80px, 15vmin) - 24px);
 	/* margin-top: 10px;
 	margin-right: 20px; */
 	font-size: 1.25rem;
